adjusted icons/images, and fixed auto-aligning of name and type fields.

--- a/css/card.css
+++ b/css/card.css
@@ -21,6 +21,11 @@ body {
     border-bottom: 1px solid lightgrey;
     padding: 3px 4px 0px 4px;
     margin-bottom: 1px;
+    /*height: 17px;*/
+}
+
+.card-name {
+    height: 18px;
 }
 
 .card-content {
@@ -33,6 +38,29 @@ body {
 .card-image {
     height: 40%;
     margin-bottom: 1px;
+    padding: 5px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-image>.image-icon {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.card-image>.image-icon.split {
+    width: 50%;
+    height: 50%;
+}
+
+.card-image>.image-icon>img{
+    max-width: 100%;
+    max-height: 100%;
+    opacity: 10%;
 }
 
 .card-type {
@@ -41,6 +69,7 @@ body {
     padding: 2px 4px;
     margin-bottom: 1px;
     font-size: 12px;
+    height: 14px;
 }
 
 .card-text {
@@ -76,15 +105,19 @@ body {
 }
 
 .card.blue {
-    background-color: #e5edf0;
+    background-color: #dbeef5;
 }
 
 .card.green {
-    background-color: #e5f0e7;
+    background-color: #dcf9e1;
 }
 
 .card.red {
     background-color: #efe1e1;
+}
+
+.card.white {
+    background-color: #faf9e5;
 }
 
 .card.colorless {
@@ -92,19 +125,19 @@ body {
 }
 
 .card.azorius {
-    background-image: linear-gradient(to right,white,#e5edf0);
+    background-image: linear-gradient(to right,#faf9e5,#dbeef5);
 }
 
 .card.orzhov {
-    background-image: linear-gradient(to right,white,#bdbdbd);
+    background-image: linear-gradient(to right,#faf9e5,#bdbdbd);
 }
 
 .card.dimir {
-    background-image: linear-gradient(to right,#e5edf0,#bdbdbd);
+    background-image: linear-gradient(to right,#dbeef5,#bdbdbd);
 }
 
 .card.izzet {
-    background-image: linear-gradient(to right,#e5edf0,#efe1e1);
+    background-image: linear-gradient(to right,#dbeef5,#efe1e1);
 }
 
 .card.rakdos {
@@ -112,23 +145,23 @@ body {
 }
 
 .card.golgari {
-    background-image: linear-gradient(to right,#bdbdbd,#e5f0e7);
+    background-image: linear-gradient(to right,#bdbdbd,#dcf9e1);
 }
 
 .card.gruul {
-    background-image: linear-gradient(to right,#efe1e1,#e5f0e7);
+    background-image: linear-gradient(to right,#efe1e1,#dcf9e1);
 }
 
 .card.boros {
-    background-image: linear-gradient(to right,#efe1e1,white);
+    background-image: linear-gradient(to right,#efe1e1,#faf9e5);
 }
 
 .card.selesnya {
-    background-image: linear-gradient(to right,#e5f0e7,white);
+    background-image: linear-gradient(to right,#dcf9e1,#faf9e5);
 }
 
 .card.simic {
-    background-image: linear-gradient(to right,#e5f0e7,#e5edf0);
+    background-image: linear-gradient(to right,#dcf9e1,#dbeef5);
 }
 
 
